fixed small issue regarding toggle on smaller screens

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1879,7 +1879,7 @@ blockquote {
     }
     
     .menu-toggle {
-        display: block;
+        display: inline-block;
     }
     
     .main-content {
